Update libraries min Java 11, move to jakarta